--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -9,6 +9,7 @@
     <title>{% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     {% block stylesheet %}{% endblock %}
 </head>
 
