--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="fr" data-theme="light">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -8,12 +8,13 @@
 
     <title>{% block title %}{% endblock %}</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    {# <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"> #}
     <link rel="stylesheet" href="/assets/css/style.css">
     {% block stylesheet %}{% endblock %}
 </head>
 
 <body>
+    {% include 'Include/_navbar.html.twig' %}
     {% block content %}{% endblock %}
     {% block javascript %}{% endblock %}
 </body>
