create table training, add Training MVC files, browse trainings

--- a/src/View/Include/_navbar.html.twig
+++ b/src/View/Include/_navbar.html.twig
@@ -1,5 +1,7 @@
 <nav class="navbar-responsive">
-	<h1>Auto école JB</h1>
+	<h1>
+		<a href="/">Auto école JB</a>
+	</h1>
 	<form id="form-navigation">
 		<label for="menu">
 			<input type="checkbox" id="menu" aria-label="Toggle menu">
@@ -9,7 +11,7 @@
         <input type="reset" form="form-navigation" id="reset-form-navigation" aria-label="Close menu">
     </label>
 	<ul>
-		<li><a href="#">Formations</a></li>
+		<li><a href="/training">Formations</a></li>
 		<li><a href="#">Tarifs</a></li>
 		<li><a href="#">Infos pratiques</a></li>
 	</ul>
