--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,8 @@
-@import url('https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Teko&family=Ubuntu:wght@400;700&display=swap');
 
+@import "pico.min.css";
 @import "_variables.css";
+@import "_global.css";
+@import "_grid.css";
 @import "_navbar.css";
+@import "_navbar-secondary.css";
