add MessageController + route + form message

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,7 @@
 
 @import "pico.min.css";
 @import "_variables.css";
+@import "_form.css";
 @import "_global.css";
 @import "_grid.css";
 @import "_navbar.css";
