--- a/public/assets/css/_variables.css
+++ b/public/assets/css/_variables.css
@@ -8,6 +8,7 @@
   --gray: #d9d9d9;
   --dark: #11191f;
   --light: #fff;
+  --danger: rgb(185, 4, 4);
 
   --box-shadow: 0px 3px 7px 2px rgb(0 0 0 / 30%);
 }
@@ -19,6 +20,6 @@
   --font-family-secondary: 'Teko', system-ui, -apple-system, 'Segoe UI',
     'Roboto', 'Cantarell', 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-
+  /* --font-size: 100%;   */
   /* --spacing: .5rem; */
 }
