add AdminController with Message tab + login/logout

--- a/src/View/Message/index.html.twig
+++ b/src/View/Message/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-	<form>
+	<form method="post">
 		<h1>Demande d'informations</h1>
 		<label for="email" >
 			Email
@@ -19,11 +19,11 @@
 				Choisissez dans la liste ci-dessous.
 			</p>
 			<label for="licence1">
-				<input type="checkbox" name="licences" id="licence1">
+				<input type="checkbox" id="licence1" >
 				Permis 1
 			</label>
 			<label for="licence2">
-				<input type="checkbox" name="licences" id="licence2">
+				<input type="checkbox" id="licence2" >
 				Permis 2
 			</label>
 		</fieldset>
