--- a/public/assets/css/_global.css
+++ b/public/assets/css/_global.css
@@ -1,5 +1,12 @@
+html {
+    height: 100vh;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
     padding-top: 5rem;
+    min-height: 100%;
 }
 
 body>main {
