--- a/src/View/Admin/layout.html.twig
+++ b/src/View/Admin/layout.html.twig
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="/admin">Accueil</a></li>
                     <li><a href="/admin/messages">Messages</a></li>
-                    <li><a href="#">Contenus</a></li>
+                    <li><a href="/admin/trainings">Les formations</a></li>
                     <li><a href="/logout">Déconnexion</a></li>
                 </ul>
             </nav>
