add FileManager + CKEditor

--- a/public/assets/css/_color.css
+++ b/public/assets/css/_color.css
@@ -1,3 +1,11 @@
+.danger {
+    color: var(--danger);
+}
+
+.success {
+    color: var(--success);
+}
+
 .bg-dark {
     background-color: var(--dark);
 }
