--- a/public/assets/css/_global.css
+++ b/public/assets/css/_global.css
@@ -12,3 +12,10 @@ body {
 body>main {
     --block-spacing-vertical: 1rem;
 }
+
+.content h2 {
+    color: var(--primary);
+}
+.content h3 {
+    color: var(--primary);
+}
