--- a/public/assets/css/_variables.css
+++ b/public/assets/css/_variables.css
@@ -8,6 +8,7 @@
   --gray: #d9d9d9;
   --dark: #11191f;
   --light: #fff;
+  --success: rgb(4,185,95);
   --danger: rgb(185, 4, 4);
 
   --box-shadow: 0px 3px 7px 2px rgb(0 0 0 / 30%);
